more clear narration

--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -29,13 +29,7 @@ We consider two cases, depending whether you already have an account registered 
 
 #### Case 1: You do not have an account
 
-Use the following Python script:
-
-```
-python3 utils/register_testnet.py
-```
-
-The script two parameters:
+We recommend using the `utils/register_testnet.py` script with the following two parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
 - your preferred alias for the testnet, e.g. `jungle`.
@@ -54,23 +48,23 @@ Owner Public Key: EOS4x5jhfaJ6vA7z5K36dWFkeZfabRbSoSoGUQFjvWNUwtFt7jXGU
 Active Public Key: EOS8LQq1VDf1F5cBSdYvbott9GgsR7Bvz4ttR8A6RJiHDKsPdBY1c
 ```
 
-To complete the process, use the above data to register a new account on a public testnet. This account will serve as a master account for the *EOSFactory* testnet object.
+To complete the process, use the suggested account name and public keys (ignore the private keys) to register a new account on a public testnet. This account will serve as a master account for the *EOSFactory* testnet object.
 
 **NOTE:** Make sure to use the testnet's faucet to fund the newly created account with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
 
 When you are ready, type `go` to let the script verify that the newly created account has been registered properly with the testnet. Once this is done, the script proceeds to register the testnet with *EOSFactory*.
 
+If everything works fine, you should see a message similar to this:
+
+```
+jungle:  tcfchehyagd4 @ http://88.99.97.30:38888
+```
+
 #### Case 2: You already have an account
 
 We assume that you already have an account registered on a public testnet and this account is able to act as a master account for the *EOSFactory* testnet object, i.e. it's funded with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
 
-Use the following Python script:
-
-```
-python3 utils/register_testnet.py
-```
-
-The script takes five parameters:
+We recommend using the `utils/register_testnet.py` script with the following five parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
 - your preferred alias for the testnet, e.g. `jungle`,
@@ -86,6 +80,12 @@ python3 utils/register_testnet.py http://88.99.97.30:38888 jungle -a dgxo1uyhoyt
 
 As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
 
+If everything works fine, you should see a message similar to this:
+
+```
+jungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
+```
+
 ## List registered testnets
 
 Open a bash terminal and run Python CLI:
@@ -99,6 +99,19 @@ Once in the Python shell, run this command:
 ```
 from eosf import *
 testnets()
+```
+
+As a result, you should get a list similar to this:
+
+```
+jungle1:  dgxo1uyhoytn @ http://88.99.97.30:38888
+jungle2:  tcfchehyagd4 @ http://88.99.97.30:38888
+jungle3:  uzpile1lv52y @ http://88.99.97.30:38888
+```
+
+You can now exit Python CLI:
+```
+exit()
 ```
 
 ## Run unit tests
@@ -139,11 +152,7 @@ python3 test/unittest1.py jungle -r
 
 ## Utilizing public testnet in an *ad hoc* mode
 
-If you have an account on a public testnet, you can skip the process of registering this testnet with *EOSFactory* and run a unit test directly, by using the `-t` option.
-
-```
-python3 test/unittest1.py -t
-```
+If you have an account on a public testnet, you can skip the process of registering this testnet with *EOSFactory* and run a unit test directly, by using the `-t` (or `--testnet`) option.
 
 This option requires four parameters:
 
