eliminate VSC from tutotrial 05

--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -116,18 +116,22 @@ exit()
 
 ## Run unit tests
 
-Open the `eosfactory/contracts/03_tic_tac_toe` folder in *Visual Studio Code*.
-
-In the terminal inside VSC, execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
+Switch to the `eosfactory/contracts/03_tic_tac_toe/test` folder:
 
 ```
-python3 test/unittest1.py
+cd contracts/03_tic_tac_toe/test
+```
+
+First, execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
+
+```
+python3 unittest1.py
 ```
 
 Next, you can attempt to run the same unit test on a public testnet:
 
 ```
-python3 test/unittest1.py jungle
+python3 unittest1.py jungle
 ```
 
 **NOTE:** The positional parameter, in our case `jungle`, indicates the alias of the public testnet.
@@ -135,7 +139,7 @@ python3 test/unittest1.py jungle
 Similarly, you can run the other (non-standard) test:
 
 ```
-python3 test/test1.py jungle
+python3 test1.py jungle
 ```
 
 ## Account management
@@ -147,7 +151,7 @@ However, during subsequent runs those accounts are reused, which saves you a lot
 Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
 
 ```
-python3 test/unittest1.py jungle -r
+python3 unittest1.py jungle -r
 ```
 
 ## Utilizing public testnet in an *ad hoc* mode
@@ -164,6 +168,6 @@ This option requires four parameters:
 In our case the command looks like this:
 
 ```
-python3 test/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
+python3 unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
