--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -238,7 +238,7 @@ If the test fails due to the `ModuleNotFoundError` error, make sure that after b
 
 #### Case 3
 
-If a unit test fails while executing the `reset() ` command, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
+If a unit test fails with the `string indices must be integers` error, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
 
 #### Case 4
 
@@ -247,6 +247,10 @@ If `nodeos` is launched but fails to produce blocks, make sure the `EOSIO_SHARED
 #### Case 5
 
 If a unit tests fails due to the `execve` error, make sure you have executed the `eosio_install.sh` script after *EOSIO* build, as described above.
+
+#### Case 6
+
+If a unit test fails with the `No such file or directory: ~/eosio-wallet/` error, please make sure this directory exists, and if not - create one manually.
 
 ## Troubleshooting general problems
 
