--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -1,6 +1,6 @@
 # Interacting with Public Testnet
 
-The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to deploy and test EOS smart-contracts on a public testnet, e.g. [Jungle Testnet](http://dev.cryptolions.io/).
+The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to deploy and test EOS smart-contracts on a public testnet, e.g. [Jungle Testnet](http://dev.cryptolions.io/) or [CryptoKylin Testnet](https://www.cryptokylin.io/).
 
 ## Prerequisites
 
@@ -25,7 +25,9 @@ Another problem is that you do not have full control of a public testnet (as is 
 
 ## Register a public testnet with *EOSFactory* 
 
-We consider two cases, depending whether you already have an account registered on a public testnet or not.
+We consider two cases, depending whether you already have an account registered on a public testnet or not. 
+
+**NOTE:** If you intend to work with the [CryptoKylin Testnet](https://www.cryptokylin.io/), first create and fund an account there, as described in [their guide](https://tools.cryptokylin.io/#/tools/create), and then jump to `Case 2`.
 
 #### Case 1: You do not have an account
 
@@ -66,16 +68,16 @@ We assume that you already have an account registered on a public testnet and th
 
 We recommend using the `utils/register_testnet.py` script with the following five parameters:
 
-- an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
-- your preferred alias for the testnet, e.g. `jungle`,
-- your account name, as registered on the testnet, e.g. `dgxo1uyhoytn`,
+- an URL of a public node offering access to the testnet, e.g. `https://api.kylin.alohaeos.com`,
+- your preferred alias for the testnet, e.g. `kylin`,
+- your account name, as registered on the testnet, e.g. `xlg3pao3idlq`,
 - your account's owner private key,
 - your account's active private key.
 
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://88.99.97.30:38888 jungle -a dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
+python3 utils/register_testnet.py https://api.kylin.alohaeos.com kylin -a xlg3pao3idlq 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
 ```
 
 As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
@@ -83,35 +85,22 @@ As a result, the script verifies that the account supplied by you is properly re
 If everything works fine, you should see a message similar to this:
 
 ```
-jungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
+kylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
 
 ## List registered testnets
 
-Open a bash terminal and run Python CLI:
+Use this command:
 
 ```
-python3
-```
-
-Once in the Python shell, run this command:
-
-```
-from eosf import *
-testnets()
+python3 utils/testnets.py
 ```
 
 As a result, you should get a list similar to this:
 
 ```
-jungle1:  dgxo1uyhoytn @ http://88.99.97.30:38888
-jungle2:  tcfchehyagd4 @ http://88.99.97.30:38888
-jungle3:  uzpile1lv52y @ http://88.99.97.30:38888
-```
-
-You can now exit Python CLI:
-```
-exit()
+jungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
+kylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
 
 ## Run unit tests
@@ -134,12 +123,20 @@ Next, you can attempt to run the same unit test on a public testnet:
 python3 unittest1.py jungle
 ```
 
-**NOTE:** The positional parameter, in our case `jungle`, indicates the alias of the public testnet.
+```
+python3 unittest1.py kylin
+```
+
+**NOTE:** The positional parameter, in our case `jungle` or `kylin`, indicates the alias of the public testnet.
 
 Similarly, you can run the other (non-standard) test:
 
 ```
 python3 test1.py jungle
+```
+
+```
+python3 test1.py kylin
 ```
 
 ## Account management
