--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -215,9 +215,9 @@ cd eosfactory
 And then run those three tests:
 
 ```
-python3 ./tests/01_hello_world.py
-python3 ./tests/02_eosio_token.py
-python3 ./tests/03_tic_tac_toe.py
+python3 tests/01_hello_world.py
+python3 tests/02_eosio_token.py
+python3 tests/03_tic_tac_toe.py
 ```
 
 **NOTE:** When running `01_hello_world` this error is to be expected, as we are testing failure due to authority mismatch:
@@ -230,7 +230,7 @@ Error 3040003: Transaction should have at least one required authority
 
 #### Case 1
 
-If the test fails due to the `can't open file './tests/01_hello_world.py'` error, make sure your current working directory is `eosfactory`.
+If the test fails due to the `can't open file 'tests/01_hello_world.py'` error, make sure your current working directory is `eosfactory`.
 
 #### Case 2
 
