--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -25,21 +25,21 @@ Another problem is that you do not have full control of a public testnet (as is 
 
 ## Register a public testnet with *EOSFactory* 
 
-We consider two cases, depending whether you already have an account registered on a public testnet or not. 
+The following procedure differs depending whether you want to use your existing account which is already registered on a public testnet or you want EOSFactory to help you with creating a new account.
 
-**NOTE:** If you intend to work with the [CryptoKylin Testnet](https://www.cryptokylin.io/), first create and fund an account there, as described in [their guide](https://tools.cryptokylin.io/#/tools/create), and then jump to `Case 2`.
+Also, if you intend to work with the [CryptoKylin Testnet](https://www.cryptokylin.io/), *EOSFactory* offers a special script for that purpose, as described in *Case 3*.
 
 #### Case 1: You do not have an account
 
 We recommend using the `utils/register_testnet.py` script with the following two parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
-- your preferred alias for the testnet, e.g. `jungle`.
+- your preferred alias for the testnet, e.g. `myjungle`.
 
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://88.99.97.30:38888 jungle
+python3 utils/register_testnet.py http://88.99.97.30:38888 myjungle
 ```
 
 In response you will receive a message similar to the following example:
@@ -59,7 +59,7 @@ When you are ready, type `go` to let the script verify that the newly created ac
 If everything works fine, you should see a message similar to this:
 
 ```
-jungle:  tcfchehyagd4 @ http://88.99.97.30:38888
+myjungle:  tcfchehyagd4 @ http://88.99.97.30:38888
 ```
 
 #### Case 2: You already have an account
@@ -68,16 +68,16 @@ We assume that you already have an account registered on a public testnet and th
 
 We recommend using the `utils/register_testnet.py` script with the following five parameters:
 
-- an URL of a public node offering access to the testnet, e.g. `https://api.kylin.alohaeos.com`,
-- your preferred alias for the testnet, e.g. `kylin`,
-- your account name, as registered on the testnet, e.g. `xlg3pao3idlq`,
+- an URL of a public node offering access to the testnet, e.g. `http://88.99.97.30:38888`,
+- your preferred alias for the testnet, e.g. `myjungle`,
+- your account name, as registered on the testnet, e.g. `tcfchehyagd4`,
 - your account's owner private key,
 - your account's active private key.
 
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py https://api.kylin.alohaeos.com kylin -a xlg3pao3idlq 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
+python3 utils/register_testnet.py http://88.99.97.30:38888 myjungle -a tcfchehyagd4 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
 ```
 
 As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
@@ -85,7 +85,39 @@ As a result, the script verifies that the account supplied by you is properly re
 If everything works fine, you should see a message similar to this:
 
 ```
-kylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
+myjungle:  tcfchehyagd4 @ http://88.99.97.30:38888
+```
+
+#### Case 3: The Kylin Testnet
+
+We recommend using the `utils/register_testnet_kylin.py` script with the following three parameters:
+
+- an URL of a public faucet, e.g. `http://faucet.cryptokylin.io`,
+- an URL of a public node offering access to the testnet, e.g. `https://api.kylin.alohaeos.com`,
+- your preferred alias for the testnet, e.g. `mykylin`.
+
+In our case the command looks like this:
+
+```
+python3 utils/register_testnet_kylin.py http://faucet.cryptokylin.io https://api.kylin.alohaeos.com mykylin
+```
+
+The output should be similar to this:
+
+```
+REMOTE testnet is active @ https://api.kylin.alohaeos.com.
+Registering account: http://faucet.cryptokylin.io/create_account?xlg3pao3idlq
+Account ``xlg3pao3idlq`` successfully registered.
+Funding account: http://faucet.cryptokylin.io/get_token?xlg3pao3idlq
+Funding account: http://faucet.cryptokylin.io/get_token?xlg3pao3idlq
+Funding account: http://faucet.cryptokylin.io/get_token?xlg3pao3idlq
+Account ``xlg3pao3idlq`` successfully funded.
+```
+
+If everything works fine, you should see a message similar to this:
+
+```
+mykylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
 
 ## List registered testnets
@@ -99,32 +131,42 @@ python3 utils/testnets.py
 As a result, you should get a list similar to this:
 
 ```
-jungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
-kylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
+myjungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
+mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
 
 ## Run unit tests
 
-Switch to the `eosfactory/contracts/03_tic_tac_toe/test` folder:
+Create a new smart-contract project:
 
 ```
-cd contracts/03_tic_tac_toe/test
+python3 utils/create_workspace.py foo_bar 03_tic_tac_toe
 ```
 
-First, execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
+**NOTE:** The first parameter is the name of your project (and it's also the name of the smart-contract itself), whereas the second parameter is the name of the template being used for project creation. For more details about this command please refer to [Working With EOS Contracts Using EOSFactory In VSC](04.WorkingWithEOSContractsUsingEOSFactoryInVSC.html).
+
+**NOTE:** As of now only the `03_tic_tac_toe` template supports the public testnet interactions.
+
+As a result, you should get a message similar to this:
 
 ```
-python3 unittest1.py
+Contract directory is /mnt/d/Workspaces/EOS/contracts/foo_bar
+```
+
+Switch to the `foo_ba` folder and first execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
+
+```
+python3 test/unittest1.py
 ```
 
 Next, you can attempt to run the same unit test on a public testnet:
 
 ```
-python3 unittest1.py jungle
+python3 test/unittest1.py jungle
 ```
 
 ```
-python3 unittest1.py kylin
+python3 test/unittest1.py kylin
 ```
 
 **NOTE:** The positional parameter, in our case `jungle` or `kylin`, indicates the alias of the public testnet.
@@ -132,11 +174,11 @@ python3 unittest1.py kylin
 Similarly, you can run the other (non-standard) test:
 
 ```
-python3 test1.py jungle
+python3 test/test1.py jungle
 ```
 
 ```
-python3 test1.py kylin
+python3 test/test1.py kylin
 ```
 
 ## Account management
@@ -148,7 +190,7 @@ However, during subsequent runs those accounts are reused, which saves you a lot
 Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
 
 ```
-python3 unittest1.py jungle -r
+python3 test/unittest1.py jungle -r
 ```
 
 ## Utilizing public testnet in an *ad hoc* mode
@@ -165,6 +207,6 @@ This option requires four parameters:
 In our case the command looks like this:
 
 ```
-python3 unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
+python3 test/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
