create_workspace -> create_project

--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -22,7 +22,7 @@ In a bash terminal run the following command:
 
 ```
 cd eosfactory
-python3 utils/create_workspace.py foo_bar 01_hello_world
+python3 utils/create_project.py foo_bar 01_hello_world
 ```
 
 Alternatively, use this command which is more handy, as it works from any directory:
@@ -44,7 +44,7 @@ Alternatively, you can add the `--vsc` option to the command and then VSC will l
 
 ```
 cd eosfactory
-python3 utils/create_workspace.py foo_bar 01_hello_world --vsc
+python3 utils/create_project.py foo_bar 01_hello_world --vsc
 ```
 
 Or using a simpler syntax:
