--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -140,7 +140,7 @@ mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 Create a new smart-contract project:
 
 ```
-python3 utils/create_workspace.py foo_bar 03_tic_tac_toe
+python3 utils/create_project.py foo_bar 03_tic_tac_toe
 ```
 
 **NOTE:** The first parameter is the name of your project (and it's also the name of the smart-contract itself), whereas the second parameter is the name of the template being used for project creation. For more details about this command please refer to [Working With EOS Contracts Using EOSFactory In VSC](04.WorkingWithEOSContractsUsingEOSFactoryInVSC.html).
