--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -27,7 +27,7 @@ Another problem is that you do not have full control of a public testnet (as is 
 
 The following procedure differs depending whether you want to use your existing account which is already registered on a public testnet or you want EOSFactory to help you with creating a new account.
 
-Also, if you intend to work with the [CryptoKylin Testnet](https://www.cryptokylin.io/), *EOSFactory* offers a special script for that purpose, as described in *Case 3*.
+Also, if you need a new account and intend to work with the [CryptoKylin Testnet](https://www.cryptokylin.io/), *EOSFactory* offers a special script for that purpose, as described in *Case 3*.
 
 #### Case 1: You do not have an account
 
@@ -89,6 +89,8 @@ myjungle:  tcfchehyagd4 @ http://88.99.97.30:38888
 ```
 
 #### Case 3: The Kylin Testnet
+
+We assume here that for the purpose of unit testing you want to create a new account on the [CryptoKylin Testnet](https://www.cryptokylin.io/). If you want to use an exiting one, please refer to *Case 2* above.
 
 We recommend using the `utils/register_testnet_kylin.py` script with the following three parameters:
 
