--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -155,7 +155,7 @@ As a result, you should get a message similar to this:
 Contract directory is /mnt/d/Workspaces/EOS/contracts/foo_bar
 ```
 
-Switch to the `foo_ba` folder and first execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
+Switch to the `foo_bar` folder and first execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
 
 ```
 python3 test/unittest1.py
@@ -164,23 +164,23 @@ python3 test/unittest1.py
 Next, you can attempt to run the same unit test on a public testnet:
 
 ```
-python3 test/unittest1.py jungle
+python3 test/unittest1.py myjungle
 ```
 
 ```
-python3 test/unittest1.py kylin
+python3 test/unittest1.py mykylin
 ```
 
-**NOTE:** The positional parameter, in our case `jungle` or `kylin`, indicates the alias of the public testnet.
+**NOTE:** The positional parameter, in our case `myjungle` or `mykylin`, indicates the alias of the public testnet.
 
 Similarly, you can run the other (non-standard) test:
 
 ```
-python3 test/test1.py jungle
+python3 test/test1.py myjungle
 ```
 
 ```
-python3 test/test1.py kylin
+python3 test/test1.py mykylin
 ```
 
 ## Account management
@@ -192,7 +192,7 @@ However, during subsequent runs those accounts are reused, which saves you a lot
 Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
 
 ```
-python3 test/unittest1.py jungle -r
+python3 test/unittest1.py myjungle -r
 ```
 
 ## Utilizing public testnet in an *ad hoc* mode
