Upgrade including bashrc

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -35,7 +35,7 @@ sudo ./eosio_install.sh
 
 ## Upgrading from previous version
 
-If you have a previous installation of *EOSFactory* on your machine, make sure to remove the `EOSIO_SHARED_MEMORY_SIZE_MB` variable from your system.
+If you have a previous installation of *EOSFactory* on your machine, please remove all *EOSFactory* export statements from your system.
 
 To do this, edit the `.profile` or `.bash_profile` file:
 
@@ -51,35 +51,43 @@ To do this, edit the `.profile` or `.bash_profile` file:
   nano ~/.bash_profile
   ```
 
-And make sure this entry is removed:
-
-```
-export EOSIO_SHARED_MEMORY_SIZE_MB=100
-```
-
-While all the other entries need to stay:
+And make sure all *EOSFactory* export statements are removed:
 
 ```
 export EOSIO_SOURCE_DIR=...
 export EOSIO_EOSFACTORY_DIR=...
 export U_HOME=...
 export eosf=...
+export EOSIO_SHARED_MEMORY_SIZE_MB=...
 export EOSIO_CONTRACT_WORKSPACE=...
 export PYTHONPATH=...
 ```
 
-**NOTE:** You might need to restart your console (or your machine) to apply the change. If everything has been removed correctly, this command should return an empty value:
+Also, if you're on Ubuntu make sure there are no similar export statements in the `~/.bashrc` file. If here are any, remove all of them.
+
+When you're done, restart your console to apply the change.
+
+If everything has been removed correctly, this command should return an empty value:
+
+```
+echo $EOSIO_SOURCE_DIR
+```
+Especially this one is important - it should return an empty value:
 
 ```
 echo $EOSIO_SHARED_MEMORY_SIZE_MB
 ```
 
-Then you can just run the `build.sh` script with the `-r` option and without having to specify any other parameters, as the they are already stored in the system variables:
+Then run the `build.sh` script with the `-r` option:
 
 ```
 cd eosfactory
-./build.sh -r
+./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace -r
 ```
+**NOTE:** Make sure to supply the correct paths:
+
+* The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
+* The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
 
 ## Build on Ubuntu & MacOS
 
