--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -63,7 +63,7 @@ export EOSIO_CONTRACT_WORKSPACE=...
 export PYTHONPATH=...
 ```
 
-Also, if you're on Ubuntu make sure there are no similar export statements in the `~/.bashrc` file. If here are any, remove all of them.
+Also, if you're on Ubuntu make sure there are no similar export statements in the `~/.bashrc` file. If there are any, remove all of them.
 
 When you're done, restart your console to apply the change.
 
@@ -72,13 +72,13 @@ If everything has been removed correctly, this command should return an empty va
 ```
 echo $EOSIO_SOURCE_DIR
 ```
-Especially this one is important - it should return an empty value:
+Especially this one is important - make sure it returns an empty value:
 
 ```
 echo $EOSIO_SHARED_MEMORY_SIZE_MB
 ```
 
-Then run the `build.sh` script with the `-r` option:
+Next, run the `build.sh` script with the `-r` option:
 
 ```
 cd eosfactory
@@ -87,7 +87,7 @@ cd eosfactory
 **NOTE:** Make sure to supply the correct paths:
 
 * The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-* The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
+* The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so if you don't already have it, you need to create it manually.
 
 ## Build on Ubuntu & MacOS
 
@@ -112,7 +112,7 @@ Then run the `build` script by pointing it to the *EOSIO* source code:
 **NOTE:** Make sure to supply the correct paths:
 
 * The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-* The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
+* The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so you need to create it manually.
 
 In our case the *EOSIO* location is `~/Workspaces/EOS/eos`, and the workspace location is `~/Workspaces/EOS/contracts`, but yours will most probably be different:
 
@@ -145,7 +145,7 @@ Then run the `build` script by pointing it to the *EOSIO* source code:
 **NOTE:** Make sure to supply the correct paths:
 
 - The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-- The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
+- The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so you need to create it manually.
 
 In our case the *EOSIO* location is `/mnt/d/Workspaces/EOS/eos`, and the workspace location is `/mnt/d/Workspaces/EOS/contracts`, but yours will most probably be different:
 
