--- a/docs/tutorials/00.IntroductionToEOSFactory.md
+++ b/docs/tutorials/00.IntroductionToEOSFactory.md
@@ -22,7 +22,7 @@ The front-end of *EOSFactory* is simply a Python3 Command Line Interface. This w
 
 #### 2. Real testnet
 
-As EOS full node is very quick we don't need to rely on a testnet simulator similar to [TestRPC](https://github.com/trufflesuite/ganache-cli) in Ethereum. Instead, we can work with a real testnet and this makes unit-tests much more reliable. Thus *EOSFactory* has the ability to launch and tear down an EOS testnet in a very efficient way, so that you can fully test your smart-contract in a couple of seconds and do it multiple times.
+As EOS full node is very quick we don't need to rely on a testnet simulator similar to [TestRPC](https://github.com/trufflesuite/ganache-cli) in Ethereum. Instead, we can work with a real testnet (both local and remote) and this makes unit-tests much more reliable. Thus *EOSFactory* lets you fully test your smart-contract in a couple of seconds and do it over and over again without much hassle.
 
 #### 3. Truly cross-platform
 
