--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -158,11 +158,11 @@ Total Test time (real) =  19.92 sec
 Also, please note that an alternative way to run the tests is to invoke them as a Python executable file, for example:
 
 ```
-python3 test/test1.py
+python3 tests/test1.py
 ```
 
 ```
-python3 test/unittest1.py
+python3 tests/unittest1.py
 ```
 
 ## Use automated tasks in *Visual Studio Code*
