--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -158,7 +158,7 @@ Contract directory is /mnt/d/Workspaces/EOS/contracts/foo_bar
 Switch to the `foo_bar` folder and first execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
 
 ```
-python3 test/unittest1.py
+python3 tests/unittest1.py
 ```
 
 Next, you can attempt to run the same unit test on a public testnet:
@@ -168,7 +168,7 @@ python3 test/unittest1.py myjungle
 ```
 
 ```
-python3 test/unittest1.py mykylin
+python3 tests/unittest1.py mykylin
 ```
 
 **NOTE:** The positional parameter, in our case `myjungle` or `mykylin`, indicates the alias of the public testnet.
@@ -176,11 +176,11 @@ python3 test/unittest1.py mykylin
 Similarly, you can run the other (non-standard) test:
 
 ```
-python3 test/test1.py myjungle
+python3 tests/test1.py myjungle
 ```
 
 ```
-python3 test/test1.py mykylin
+python3 tests/test1.py mykylin
 ```
 
 ## Account management
@@ -192,7 +192,7 @@ However, during subsequent runs those accounts are reused, which saves you a lot
 Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
 
 ```
-python3 test/unittest1.py myjungle -r
+python3 tests/unittest1.py myjungle -r
 ```
 
 ## Utilizing public testnet in an *ad hoc* mode
@@ -209,6 +209,6 @@ This option requires four parameters:
 In our case the command looks like this:
 
 ```
-python3 test/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
+python3 tests/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
