--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -165,22 +165,46 @@ create_account("carol", master)
 You can play with the contract by sending it actions with different arguments:
 
 ```
+contract.push_action("hi", {"user":alice}, permission=alice)
+```
+
+```
+contract.push_action("hi", {"user":carol}, permission=carol)
+```
+
+```
+contract.push_action("hi", {"user":alice}, permission=carol)
+```
+
+```
+contract.push_action("hi", {"user":carol}, permission=alice)
+```
+
+**NOTE:** The `push_action` method takes three parameters:
+
+* the name of the action, e.g. `"hi"`,
+* the data required by the action, e.g. `{"user":alice}`,
+* the permissions required by the action, e.g. `alice`.
+
+Regarding permissions, *EOSFactory* offers several options:
+
+```
 contract.push_action("hi", {"user":alice}, alice)
 ```
 
 ```
-contract.push_action("hi", {"user":carol}, carol)
+contract.push_action("hi", {"user":alice}, permission=alice)
 ```
 
 ```
-contract.push_action("hi", {"user":alice}, carol)
+contract.push_action("hi", {"user":alice}, permission=(alice, Permission.ACTIVE))
 ```
 
 ```
-contract.push_action("hi", {"user":carol}, alice)
+contract.push_action("hi", {"user":alice}, permission=[(alice, Permission.ACTIVE), (carol, Permission.OWNER)]
 ```
 
-All the above variations should work, as the contract allows anyone to authorize it.
+All the above variations should work, as the contract allows anyone to authorize the `hi` action.
 
 **NOTE:** Among other things, the console displays a debugger output, for example:
 
@@ -221,7 +245,7 @@ contract.deploy()
 Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
 
 ```
-contract.push_action("hi", {"user":alice}, carol)
+contract.push_action("hi", {"user":alice}, permission=carol)
 ```
 
 ```
@@ -232,7 +256,7 @@ Ensure that you have the related authority inside your transaction!
 But if we use the appropriate authority, there should no error:
 
 ```
-contract.push_action("hi", {"user":alice}, alice)
+contract.push_action("hi", {"user":alice}, permission=alice)
 ```
 
 ## Clean up
