--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -287,7 +287,7 @@ Thus the logger utility offers you much more than just a way of monitoring the v
 **NOTE:** For the logger output to be visible in the console, make sure that your unit test contains the `Verbosity.DEBUG` flag as part of the `Logger.verbosity` options, for example:
 
 ```
-Logger.verbosity = [Verbosity.INFO, Verbosity.OUT, Verbosity.DEBUG]
+verbosity = [Verbosity.INFO, Verbosity.OUT, Verbosity.DEBUG]
 ```
 
 In our examples logger verbosity is defined in the top section of the file, just below the import statements.
