docs improved after external feedback

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -24,14 +24,13 @@ sudo ./eosio_install.sh
 
 ## Prerequisites for Ubuntu & MacOS
 
-* Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
-* We also assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed.
+* We assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) installed.
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
-- And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
+- And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default.
 
 ## Upgrading from previous version
 
