--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -153,7 +153,15 @@ Or shipped with *EOSFactory*, for example:
 contract = Contract(host, "02_eosio_token")
 ```
 
-## Deploy the EOS Token Contract
+## Build the Contract
+
+Before deploying the contract needs to be built from the source code. To build the contract invoke its `build()` method:
+
+```
+contract.build()
+```
+
+## Deploy the Contract
 
 At this stage the contract has no code deployed. You can check it by running its `code()` method:
 
