--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -87,7 +87,7 @@ master.info()
 
 You don't need to worry about locking or unlocking the wallet, managing its password or importing private keys into it. All of this is being taken care of by EOS Factory behind the scenes.
 
-## Create test accounts
+## Create Accounts
 
 If you need to create test accounts, here is how you do it:
 
@@ -117,7 +117,7 @@ And then run the `info()` command to verify that the `charlie4eos` name is actua
 charlie2.info()
 ```
 
-## Create reference to the EOS Token Contract
+## Create Reference to the Contract
 
 We assume that a local testnet is running and initialized:
 
@@ -181,7 +181,7 @@ And now you can verify that the hash of the deployed code is non-zero:
 contract.code()
 ```
 
-## Create the EOS Token
+## Create the Token
 
 To create a new token we call the `create` action on the `eosio.token` contract:
 
@@ -213,7 +213,7 @@ host.show_action(
     }, [master, host])
 ```
 
-## Create Testing Accounts
+## Create More Accounts
 
 We'll need two accounts. To create them just run:
 
@@ -222,7 +222,7 @@ create_account("alice", master)
 create_account("carol", master)
 ```
 
-## Issue EOS Tokens
+## Issue Tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
@@ -237,7 +237,7 @@ host.push_action(
 
 **NOTE:** In this case the permission is assigned to the default `master` account.
 
-## Transfer EOS Tokens
+## Transfer Tokens
 
 Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
