config.py rearranged. Installation tests passed

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -54,7 +54,7 @@ And make sure all *EOSFactory* export statements are removed:
 
 ```
 export EOSIO_SOURCE_DIR=...
-export EOSIO_EOSFACTORY_DIR=...
+export EOSFACTORY_DIR=...
 export U_HOME=...
 export eosf=...
 export EOSIO_SHARED_MEMORY_SIZE_MB=...
@@ -271,28 +271,29 @@ python3 utils/config.py
 As a result, you should get data similar to this:
 
 ```
-"EOSIO_SOURCE_DIR": "/mnt/x/Workspaces/EOS/eos",
-"EOSIO_EOSFACTORY_DIR": "/mnt/x/Workspaces/EOS/eosfactory",
-"EOSIO_DATA_DIR": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
-"EOSIO_CONFIG_DIR": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
-"KEOSD_WALLET_DIR": "${HOME}/eosio-wallet/",
-"nodeExe": "/mnt/x/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
-"cleosExe": "/mnt/x/Workspaces/EOS/eos/build/programs/cleos/cleos",
-"genesisJson": "/mnt/x/Workspaces/EOS/eosfactory/build/daemon/data-dir/genesis.json",
-"EOSIO_DAEMON_ADDRESS": "127.0.0.1:8888",
+"ABIGEN_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/eosio-abigen/eosio-abigen",
+"BOOST_INCLUDE_DIR": "/home/cartman/opt/boost/include",
+"EOSFACTORY_DIR": "/mnt/c/Workspaces/EOS/eosfactory",
+"EOSIO_CLI_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/cleos/cleos",
+"EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
+"EOSIO_GENESIS_JSON": "/mnt/c/Workspaces/EOS/eosfactory/build/daemon/data-dir/genesis.json",
 "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
 "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
-"EOSIO_WALLET_ADDRESS": "127.0.0.1:8888",
-"EOSIO_DAEMON_NAME": "nodeos",
-"EOSIO_WASM_CLANG": "${HOME}/opt/wasm/bin/clang",
-"EOSIO_BOOST_INCLUDE_DIR": "${HOME}/opt/boost/include",
-"EOSIO_WASM_LLVM_LINK": "${HOME}/opt/wasm/bin/llvm-link",
-"EOSIO_WASM_LLC": "${HOME}/opt/wasm/bin/llc",
-"EOSIO_S2WASM": "/usr/local/bin/eosio-s2wasm",
-"EOSIO_WAST2WASM": "/usr/local/bin/eosio-wast2wasm",
-"sharedMemory": "200",
-"contractWorkspace": "/mnt/x/Workspaces/EOS/contracts",
-"workspaceEosio": "/mnt/x/Workspaces/EOS/eos/build/contracts/"
+"EOSIO_SHARED_MEMORY_SIZE_MB": "200",
+"EOSIO_SOURCE_DIR": "/mnt/c/Workspaces/EOS/eos",
+"EOSIO_WORKSPACE": "/mnt/c/Workspaces/EOS/eos/build/contracts/",
+"KEOSD_WALLET_DIR": "/home/cartman/eosio-wallet/",
+"LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
+"LOCAL_NODE_CONFIG_DIR": "/mnt/c/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
+"LOCAL_NODE_DATA_DIR": "/mnt/c/Workspaces/EOS/eosfactory/build/daemon/data-dir/",
+"LOCAL_NODE_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
+"NODE_IN_WINDOW": 0,
+"S2WASM_EXECUTABLE": "/usr/local/bin/eosio-s2wasm",
+"WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
+"WASM_CLANG_EXECUTABLE": "/home/cartman/opt/wasm/bin/clang",
+"WASM_LLC_EXECUTABLE": "/home/cartman/opt/wasm/bin/llc",
+"WASM_LLVM_LINK_EXECUTABLE": "/home/cartman/opt/wasm/bin/llvm-link",
+"WAST2WASM_EXECUTABLE": "/usr/local/bin/eosio-wast2wasm"
 ```
 
 Next, verify that all the above paths are resolved.
