environmental variables in profile -- removed

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -55,7 +55,7 @@ And make sure all *EOSFactory* export statements are removed:
 ```
 export EOSIO_SOURCE_DIR=...
 export EOSFACTORY_DIR=...
-export U_HOME=...
+export HOME=...
 export eosf=...
 export EOSIO_SHARED_MEMORY_SIZE_MB=...
 export EOSIO_CONTRACT_WORKSPACE=...
