docs for 2.2 release

--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -19,7 +19,7 @@ python3
 Once in the Python shell, import the *EOSFactory* library:
 
 ```
-from eosf import *
+from eosfactory.eosf import *
 ```
 
 ## Create a new contract from template
@@ -42,12 +42,6 @@ contract = ContractBuilder("foo_bar")
 
 ```
 contract = ContractBuilder("01_hello_world")
-```
-
-Or a demo contract supplied by *EOSIO*, for example:
-
-```
-contract = ContractBuilder("eosio.token")
 ```
 
 ## Edit the source code
@@ -75,7 +69,7 @@ class hello : public eosio::contract {
   public:
     using contract::contract;
 
-    /// @abi action
+    [[eosio::action]]
     void hi( account_name user ) {
       logger_info( "debug user name: ", name{user} );
       //require_auth( user );
@@ -111,6 +105,7 @@ First, start the testnet and initialize the workspace:
 
 ```
 reset()
+create_wallet()
 create_master_account("master")
 ```
 
@@ -200,7 +195,7 @@ contract.push_action("hi", {"user":alice}, permission=(alice, Permission.ACTIVE)
 ```
 
 ```
-contract.push_action("hi", {"user":alice}, permission=[(alice, Permission.ACTIVE), (carol, Permission.OWNER)]
+contract.push_action("hi", {"user":alice}, permission=[(alice, Permission.ACTIVE), (carol, Permission.OWNER)])
 ```
 
 All the above variations should work, as the contract allows anyone to authorize the `hi` action.
