--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -8,11 +8,11 @@ We've tested *EOSFactory* on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.2.x](https://github.com/EOSIO/eos/releases/tag/v1.2.0) and [v1.3.x](https://github.com/EOSIO/eos/releases/tag/v1.3.0) .
+**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.3.x](https://github.com/EOSIO/eos/releases/tag/v1.3.0) .
 
 ## General Prerequisites
 
-We assume that you have successfully installed *EOSIO* [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code).
+We assume that you have successfully installed *EOSIO* [v1.3.0](https://github.com/EOSIO/eos/releases/tag/v1.3.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code).
 
 **NOTE:** *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
@@ -66,28 +66,6 @@ Also, if you're on Ubuntu make sure there are no similar export statements in th
 
 When you're done, restart your console to apply the change.
 
-If everything has been removed correctly, this command should return an empty value:
-
-```
-echo $EOSIO_SOURCE_DIR
-```
-Especially this one is important - make sure it returns an empty value:
-
-```
-echo $EOSIO_SHARED_MEMORY_SIZE_MB
-```
-
-Next, run the `build.sh` script:
-
-```
-cd eosfactory
-./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
-```
-**NOTE:** Make sure to supply the correct paths:
-
-* The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-* The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so if you don't already have it, you need to create it manually.
-
 ## Build on Ubuntu & MacOS
 
 Clone *EOSFactory* source code from the repository:
@@ -102,22 +80,16 @@ Open a bash terminal and navigate to the `eosfactory` folder:
 cd eosfactory
 ```
 
-Then run the `build` script by pointing it to the *EOSIO* source code:
+Then run the `install` script by pointing it to the *EOSIO* source code:
 
 ```
-./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
+./install.sh
 ```
 
-**NOTE:** Make sure to supply the correct paths:
+**NOTE:** When prompted supply the correct paths:
 
-* The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-* The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so you need to create it manually.
-
-In our case the *EOSIO* location is `~/Workspaces/EOS/eos`, and the workspace location is `~/Workspaces/EOS/contracts`, but yours will most probably be different:
-
-```
-./build.sh -e ~/Workspaces/EOS/eos -w ~/Workspaces/EOS/contracts
-```
+- The first one is the location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be already existent, so if you don't have it you need to create it manually.
+- The second one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
 
 ## Build on Windows
 
@@ -135,79 +107,16 @@ Open a WSL bash terminal and navigate to the `eosfactory` folder:
 cd /mnt/d/Workspaces/EOS/eosfactory
 ```
 
-Then run the `build` script by pointing it to the *EOSIO* source code:
+Then run the `install` script by pointing it to the *EOSIO* source code:
 
 ```
-./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
+./install.sh
 ```
 
-**NOTE:** Make sure to supply the correct paths:
+**NOTE:** When prompted supply the correct paths:
 
-- The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
-- The second one is meant to be the location of your smart-contract workspace. It has to be already existent, so you need to create it manually.
-
-In our case the *EOSIO* location is `/mnt/d/Workspaces/EOS/eos`, and the workspace location is `/mnt/d/Workspaces/EOS/contracts`, but yours will most probably be different:
-
-```
-./build.sh -e /mnt/d/Workspaces/EOS/eos -w /mnt/d/Workspaces/EOS/contracts
-```
-
-**NOTE:** The `build` script assumes that your WSL is located in this directory:
-
-```
-%LocalAppData%\\Packages\\CanonicalGroupLimited.Ubuntu18.04onWindows_79rhkp1fndgsc
-```
-
-If you have the latest WSL release, this assumption is most likely valid. However, if for some reasons your WSL is in a different location, run the `build` script again with an additional `-o` parameter pointing to your WSL `rootfs` directory, for example:
-
-```
-./build.sh -e /mnt/d/Workspaces/EOS/eos -o %LocalAppData%\Packages\CanonicalGroupLimited.Ubuntu18.04onWindows_79rhkp1fndgsc\LocalState\rootfs
-```
-
-If you are unsure what the path is in your case, open Windows Explorer, navigate to the `%LocalAppData%\\Packages` folder and search for `rootfs`.
-
-## Source system variables
-
-If the build process is successful, you should see this message:
-
-```
-         ______ ____   _____  ______      _____ _______ ____  _______     __
-        |  ____/ __ \ / ____||  ____/\   / ____|__   __/ __ \|  __ \ \   / /
-        | |__ | |  | | (___  | |__ /  \ | |       | | | |  | | |__) \ \_/ / 
-        |  __|| |  | |\___ \ |  __/ /\ \| |       | | | |  | |  _  / \   /  
-        | |___| |__| |____) || | / ____ \ |____   | | | |__| | | \ \  | |   
-        |______\____/|_____/ |_|/_/    \_\_____|  |_|  \____/|_|  \_\ |_|  
-```
-
-At this stage you need to source the system variables that were created during *EOSFactory* installation. The command may differ depending on your system. 
-
-* If you are on Ubuntu or *Windows Subsystem for Linux*:
-
-  ```
-  source ~/.profile
-  ```
-
-* If you are on MacOS:
-
-  ```
-  source ~/.bash_profile
-  ```
-
-**NOTE:** If you have *Visual Studio Code* installed on your machine, make sure it's shut down (or restart it completely after installing *EOSFactory*). Otherwise those system variables will not be visible to VSC and some *CMake*-based tasks executed in VSC might fail.
-
-## Install *termcolor*
-
-In order to make unit test output more readable we recommend installing the [termcolor](https://pypi.org/project/termcolor/) extension for Python:
-
-```
-python3 -m pip install termcolor
-```
-
-**NOTE:** If the above command fails you might need to install `python3-pip`:
-
-```
-sudo apt install python3-pip
-```
+- The first one is the location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be already existent, so if you don't have it you need to create it manually.
+- The second one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
 
 ## Test the build
 
@@ -227,12 +136,6 @@ python3 tests/02_eosio_token.py
 python3 tests/03_tic_tac_toe.py
 ```
 
-**NOTE:** When running `01_hello_world` this error is to be expected, as we are testing failure due to authority mismatch:
-
-```
-Error 3040003: Transaction should have at least one required authority
-```
-
 ## Troubleshooting specific errors
 
 #### Case 1
@@ -241,23 +144,11 @@ If the test fails due to the `can't open file 'tests/01_hello_world.py'` error, 
 
 #### Case 2
 
-If the test fails due to the `ModuleNotFoundError` error, make sure that after building EOSFactory you've sourced the newly created system variables, as described in the previous section.
+If a unit tests fails due to the `execve` error, make sure you have executed the `eosio_install.sh` script after *EOSIO* build, as described above.
 
 #### Case 3
 
-If a unit test fails with the `string indices must be integers` error, make sure you have EOSIO [v1.2.0](https://github.com/EOSIO/eos/releases/tag/v1.2.0) (or higher) installed. Also, make sure no other instance of `nodeos` is running on your machine.
-
-#### Case 4
-
-If `nodeos` is launched but fails to produce blocks, make sure the `EOSIO_SHARED_MEMORY_SIZE_MB` variable has been properly removed from system variables, as described above.
-
-#### Case 5
-
-If a unit tests fails due to the `execve` error, make sure you have executed the `eosio_install.sh` script after *EOSIO* build, as described above.
-
-#### Case 6
-
-If a unit test fails with the `No such file or directory: ~/eosio-wallet/` error, please make sure this directory exists, and if not - create one manually.
+If a unit test fails with the `No such file or directory: ~/eosio-wallet/` error, please make sure this directory exists, and if not, create one manually.
 
 ## Troubleshooting general problems
 
@@ -271,28 +162,32 @@ python3 utils/config.py
 As a result, you should get data similar to this:
 
 ```
-"ABIGEN_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/eosio-abigen/eosio-abigen",
-"BOOST_INCLUDE_DIR": "/home/cartman/opt/boost/include",
-"EOSIO_CLI_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/cleos/cleos",
-"EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
-"EOSIO_GENESIS_JSON": "/mnt/c/Workspaces/EOS/eosfactory/localnode/genesis.json",
+"ABIGEN_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/eosio-abigen/eosio-abigen",
+"BOOST_INCLUDE_DIR": "/home/sygnet/opt/boost/include",
+"EOSIO_ABIGEN": null,
+"EOSIO_CLI_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/cleos/cleos",
+"EOSIO_CONTRACT_WORKSPACE": "/mnt/d/Workspaces/EOS/contracts",
+"EOSIO_CPP": null,
+"EOSIO_GENESIS_JSON": "/mnt/d/Workspaces/EOS/eosfactory/localnode/genesis.json",
 "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
 "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
 "EOSIO_SHARED_MEMORY_SIZE_MB": "200",
-"EOSIO_SOURCE_DIR": "/mnt/c/Workspaces/EOS/eos",
-"EOSIO_WORKSPACE": "/mnt/c/Workspaces/EOS/eos/build/contracts/",
-"KEOSD_WALLET_DIR": "/home/cartman/eosio-wallet/",
+"EOSIO_SOURCE_DIR": "/mnt/d/Workspaces/EOS/eos",
+"EOSIO_WORKSPACE": "/mnt/d/Workspaces/EOS/eos/build/contracts/",
+"KEOSD_WALLET_DIR": "/home/sygnet/eosio-wallet/",
 "LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
-"LOCAL_NODE_CONFIG_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode",
-"LOCAL_NODE_DATA_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode",
-"LOCAL_NODE_EXECUTABLE": "/mnt/c/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
+"LOCAL_NODE_CONFIG_DIR": "/mnt/d/Workspaces/EOS/eosfactory/localnode",
+"LOCAL_NODE_DATA_DIR": "/mnt/d/Workspaces/EOS/eosfactory/localnode",
+"LOCAL_NODE_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
+"NODE_API": "cleos",
 "NODE_IN_WINDOW": 0,
-"S2WASM_EXECUTABLE": "/usr/local/bin/eosio-s2wasm",
+"S2WASM_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/externals/binaryen/bin/eosio-s2wasm",
 "WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
-"WASM_CLANG_EXECUTABLE": "/home/cartman/opt/wasm/bin/clang",
-"WASM_LLC_EXECUTABLE": "/home/cartman/opt/wasm/bin/llc",
-"WASM_LLVM_LINK_EXECUTABLE": "/home/cartman/opt/wasm/bin/llvm-link",
-"WAST2WASM_EXECUTABLE": "/usr/local/bin/eosio-wast2wasm"
+"WASM_CLANG_EXECUTABLE": "/home/sygnet/opt/wasm/bin/clang",
+"WASM_LLC_EXECUTABLE": "/home/sygnet/opt/wasm/bin/llc",
+"WASM_LLVM_LINK_EXECUTABLE": "/home/sygnet/opt/wasm/bin/llvm-link",
+"WAST2WASM_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/libraries/wasm-jit/Source/Programs/eosio-wast2wasm",
+"WSL_ROOT": "C:/Users/tokenika/AppData/Local/Packages/CanonicalGroupLimited.Ubuntu18.04onWindows_79rhkp1fndgsc/LocalState/rootfs"
 ```
 
 Next, verify that all the above paths are resolved.
@@ -309,17 +204,5 @@ git pull
 And then just run:
 
 ```
-./build.sh
-```
-
-**NOTE:** After the initial successful installation, unless the path to your *EOSIO* source code and/or your workspace directory has changed, you don't need to supply them when doing subsequent *EOSFactory* builds, as those paths are already stored in your system variables. If you do need to supply those parameters, use this syntax:
-
-```
-./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
-```
-
-And to get help for the `build` script:
-
-```
-./build.sh -h
+./install.sh
 ```
