--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -18,7 +18,7 @@ python3
 Once in the Python shell, import the *EOSFactory* library:
 
 ```
-from eosf import *
+from eosfactory.eosf import *
 ```
 
 ## Start Local Testnet
@@ -136,18 +136,10 @@ create_account("host", master)
 And then create a reference to the contract by supplying the host account and the path to the folder where the contract is located, for example:
 
 ```
-contract = Contract(host, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+contract = Contract(host, "/mnt/d/Workspaces/EOS/eosfactory/contracts/02_eosio_token")
 ```
 
-Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`.
-
-This way you can have an easy access to all demo contracts that are shipped with both *EOSIO*, for example:
-
-```
-contract = Contract(host, "eosio.token")
-```
-
-Or shipped with *EOSFactory*, for example:
+Alternatively, supply just the name of the folder, if it can be found in the standard location, i.e. `eosfactory/contracts`, for example:
 
 ```
 contract = Contract(host, "02_eosio_token")
