create_wallet() rm

--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -65,13 +65,7 @@ First, make sure a local testnet is running:
 reset()
 ```
 
-Next, create a new wallet:
-
-```
-create_wallet()
-```
-
-And finally, create a master account from which other accounts can be created:
+Next, create a master account from which other accounts can be created:
 
 ```
 create_master_account("master")
@@ -123,7 +117,6 @@ We assume that a local testnet is running and initialized:
 
 ```
 reset()
-create_wallet()
 create_master_account("master")
 ```
 
