install sequence fixed

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -10,7 +10,7 @@ We've tested *EOSFactory* on the following platforms:
 
 **NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.3.x](https://github.com/EOSIO/eos/releases/tag/v1.3.0) .
 
-## General Prerequisites
+## General prerequisites
 
 We assume that you have successfully installed *EOSIO* [v1.3.0](https://github.com/EOSIO/eos/releases/tag/v1.3.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code).
 
@@ -88,8 +88,8 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 
 **NOTE:** When prompted supply the correct paths:
 
-- The first one is the location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be already existent, so if you don't have it you need to create it manually.
-- The second one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
+- The first one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
+- The second one is the preferred location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
 ## Build on Windows
 
@@ -115,8 +115,8 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 
 **NOTE:** When prompted supply the correct paths:
 
-- The first one is the location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be already existent, so if you don't have it you need to create it manually.
-- The second one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
+- The first one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
+- The second one is the preferred location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
 ## Test the build
 
