--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -21,7 +21,7 @@ Once in the Python shell, import the *EOSFactory* library:
 from eosfactory.eosf import *
 ```
 
-## Start Local Testnet
+## Start local testnet
 
 To start your own single-node local testnet:
 
@@ -37,7 +37,7 @@ To verify the *EOSIO* node is running or to get information about the current st
 info()
 ```
 
-## Manage Local Testnet
+## Manage local testnet
 
 To stop the current testnet:
 
@@ -57,7 +57,7 @@ To stop the current testnet and start a new one:
 reset()
 ```
 
-## Initialize Workspace
+## Initialize workspace
 
 First, make sure a local testnet is running:
 
@@ -81,7 +81,7 @@ master.info()
 
 You don't need to worry about locking or unlocking the wallet, managing its password or importing private keys into it. All of this is being taken care of by EOS Factory behind the scenes.
 
-## Create Accounts
+## Create accounts
 
 If you need to create test accounts, here is how you do it:
 
@@ -111,7 +111,7 @@ And then run the `info()` command to verify that the `charlie4eos` name is actua
 charlie2.info()
 ```
 
-## Create Reference to the Contract
+## Create reference to an existing contract
 
 We assume that a local testnet is running and initialized:
 
@@ -138,7 +138,7 @@ Alternatively, supply just the name of the folder, if it can be found in the sta
 contract = Contract(host, "02_eosio_token")
 ```
 
-## Build the Contract
+## Build the contract
 
 Before deploying the contract needs to be built from the source code. To build the contract invoke its `build()` method:
 
@@ -146,7 +146,7 @@ Before deploying the contract needs to be built from the source code. To build t
 contract.build()
 ```
 
-## Deploy the Contract
+## Deploy the contract
 
 At this stage the contract has no code deployed. You can check it by running its `code()` method:
 
@@ -166,7 +166,7 @@ And now you can verify that the hash of the deployed code is non-zero:
 contract.code()
 ```
 
-## Create the Token
+## Create the token
 
 To create a new token we call the `create` action on the `eosio.token` contract:
 
@@ -198,7 +198,7 @@ host.show_action(
     }, [master, host])
 ```
 
-## Create More Accounts
+## Create more accounts
 
 We'll need two accounts. To create them just run:
 
@@ -207,7 +207,7 @@ create_account("alice", master)
 create_account("carol", master)
 ```
 
-## Issue Tokens
+## Issue tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
@@ -222,7 +222,7 @@ host.push_action(
 
 **NOTE:** In this case the permission is assigned to the default `master` account.
 
-## Transfer Tokens
+## Transfer tokens
 
 Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
@@ -238,7 +238,7 @@ host.push_action(
 
 **NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
 
-## Check the Contract Table
+## Check the contract table
 
 From the contract's ABI we know that the table keeping track of the token balances is called `accounts`.
 
@@ -278,7 +278,7 @@ And this is for `carol`:
 }
 ```
 
-## Stop Testnet and Exit Python
+## Stop testnet and exit Python
 
 To stop the local testnet:
 
