--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -32,13 +32,19 @@ contract = ContractBuilder(project_from_template("foo_bar", template="01_hello_w
 
 **NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
 
-The above command creates a new folder and inside it a new smart-contract file is placed. However, if you want to access an existing smart-contract, use the following syntax instead:
+The above command creates a new folder and inside it a new smart-contract file is placed. However, if you want to access an existing smart-contract, use the following syntax instead, by specifying the entire path, for example:
+
+```
+contract = ContractBuilder("/mnt/d/Workspaces/EOS/contracts/foo_bar")
+```
+
+Or use just the folder name, if the contract is located in the workspace you explicitly defined when installing *EOSFactory*:
 
 ```
 contract = ContractBuilder("foo_bar")
 ```
 
-**NOTE:** In a similar way you could access a demo contract supplied by *EOSFactory*, for example:
+In a similar way, you can access demo contracts shipped with *EOSFactory*, for example:
 
 ```
 contract = ContractBuilder("01_hello_world")
@@ -120,13 +126,19 @@ Next, let's redefine the contract, so that it's associated with the above accoun
 contract = Contract(host, contract.path())
 ```
 
-Or you can use the contract name explicitly:
+Or you can use the name of the contract's folder (provided it's located in your smart-contract workspace):
 
 ```
 contract = Contract(host, "foo_bar")
 ```
 
-And now we can deploy the contract:
+Or you can use the entire path to the contract's folder:
+
+```
+contract = Contract(host, "/mnt/d/Workspaces/EOS/contracts/foo_bar")
+```
+
+Next, we can deploy the contract:
 
 ```
 contract.deploy()
